--- a/data_analysis/article_analysis.ipynb
+++ b/data_analysis/article_analysis.ipynb
@@ -540,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -550,83 +550,42 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sample_text = \"i love you\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "tokens = bert_tokenizer.tokenize(sample_text)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "3"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(tokens)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "204107it [09:18, 365.59it/s]\n"
+      "204107it [05:32, 614.60it/s]\n"
      ]
     }
    ],
    "source": [
     "title_lenght = []\n",
     "meta_description_lenght = []\n",
+    "keywords_lenght = []\n",
     "\n",
     "for i,row in tqdm(raw_articles.iterrows()):\n",
     "    \n",
     "    title = str(row['page_title'])\n",
     "    meta_description = str(row['meta_description'])\n",
+    "    keywords = str(row['keywords'])\n",
     "    \n",
     "    total_tokens_title = len(bert_tokenizer.tokenize(title))\n",
     "    lenght_meta_description = len(bert_tokenizer.tokenize(meta_description))\n",
+    "    lenght_keywords = len(bert_tokenizer.tokenize(keywords))\n",
     "    \n",
     "    title_lenght.append(total_tokens_title)\n",
     "    meta_description_lenght.append(lenght_meta_description)\n",
+    "    keywords_lenght.append(lenght_keywords)\n",
     "    "
    ]
   },
@@ -639,7 +598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -664,7 +623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -685,6 +644,31 @@
     "print(\"min words = \"+str(np.min(meta_description_lenght)))\n",
     "print(\"avg words = \"+str(np.mean(meta_description_lenght)))\n",
     "print(\"std words = \"+str(np.std(meta_description_lenght)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "keywords tokens analysis analysis:\n",
+      "max words = 107\n",
+      "min words = 1\n",
+      "avg words = 20.888303683852097\n",
+      "std words = 5.0942223999569\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('keywords tokens analysis analysis:')\n",
+    "print(\"max words = \"+str(np.max(keywords_lenght)))\n",
+    "print(\"min words = \"+str(np.min(keywords_lenght)))\n",
+    "print(\"avg words = \"+str(np.mean(keywords_lenght)))\n",
+    "print(\"std words = \"+str(np.std(keywords_lenght)))"
    ]
   }
  ],
