--- a/data_analysis/table_analysis.ipynb
+++ b/data_analysis/table_analysis.ipynb
@@ -567,36 +567,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "85995it [08:13, 174.22it/s]\n"
+      "85995it [04:22, 327.41it/s]\n"
      ]
     }
    ],
    "source": [
     "title_lenght = []\n",
     "summary_lenght = []\n",
+    "keywords_lenght = []\n",
     "\n",
     "for i,row in tqdm(raw_tables.iterrows()):\n",
     "    \n",
     "    title = str(row['table_page_title']) \n",
     "    summary = str(row['table_page_summary'])\n",
+    "    keywords = str(row['table_page_keywords'])\n",
     "    \n",
     "    lenght_title = len(bert_tokenizer.tokenize(title))\n",
     "    lenght_summary= len(bert_tokenizer.tokenize(summary))\n",
+    "    lenght_keywords = len(bert_tokenizer.tokenize(keywords))\n",
     "   \n",
     "    title_lenght.append(lenght_title)\n",
-    "    summary_lenght.append(lenght_summary)"
+    "    summary_lenght.append(lenght_summary)\n",
+    "    keywords_lenght.append(lenght_keywords)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -621,7 +625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -646,10 +650,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "keywords tokens analysis analysis:\n",
+      "max words = 93\n",
+      "min words = 1\n",
+      "avg words = 15.666015466015466\n",
+      "std words = 3.777359069458154\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('keywords tokens analysis analysis:')\n",
+    "print(\"max words = \"+str(np.max(keywords_lenght)))\n",
+    "print(\"min words = \"+str(np.min(keywords_lenght)))\n",
+    "print(\"avg words = \"+str(np.mean(keywords_lenght)))\n",
+    "print(\"std words = \"+str(np.std(keywords_lenght)))"
+   ]
   }
  ],
  "metadata": {
