--- a/encoder_models/encoder_bert/test_encoder_model_bert.ipynb
+++ b/encoder_models/encoder_bert/test_encoder_model_bert.ipynb
@@ -15,7 +15,7 @@
     "from nltk.tokenize import TweetTokenizer\n",
     "tknzr = TweetTokenizer()\n",
     "import tensorflow as tf\n",
-    "from transformers import TFBertModel, BertTokenizer"
+    "from transformers import TFBertModel, BertTokenizer, TFBertMainLayer, BertConfig"
    ]
   },
   {
@@ -68,7 +68,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bert_model = TFBertModel.from_pretrained(\"fine_tuning_bert\")\n",
+    "bert_model = TFBertModel.from_pretrained(\"bert-base-cased\")\n",
     "bert_tokenizer = BertTokenizer.from_pretrained(\"bert-base-cased\")"
    ]
   },
@@ -85,7 +85,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "MAX_TOKENS = 100"
+    "MAX_TOKENS = 125"
    ]
   },
   {
@@ -105,6 +105,65 @@
     "\n",
     "tables = pd.read_csv('../../dataset/distinct_tables_allsignals.csv', delimiter=',', keep_default_na=False)\n",
     "tables = tables.drop(tables[tables.table_page_title == \"\"].index)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def triplet_loss(y_true, y_pred, alpha = 0.5):\n",
+    "     \n",
+    "    anchor = y_pred[:,0:768]\n",
+    "    positive = y_pred[:,768:1536]\n",
+    "    negative = y_pred[:,1536:2304]\n",
+    "        \n",
+    "    # distance between the anchor and the positive\n",
+    "    pos_dist = tf.keras.layers.Dot(axes=1,normalize=True)([anchor, positive])\n",
+    "    \n",
+    "    # distance between the anchor and the negative\n",
+    "    neg_dist = tf.keras.layers.Dot(axes=1,normalize=True)([anchor, negative])\n",
+    "    \n",
+    "    # compute loss\n",
+    "    basic_loss = (1 - pos_dist) - (1 - neg_dist) + alpha\n",
+    "    loss = tf.keras.backend.maximum(basic_loss,0.0)\n",
+    " \n",
+    "    return loss"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "loaded_model = tf.keras.models.load_model('bert_encoder_model2', custom_objects={'triplet_loss': triplet_loss})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "layer_name = 'bert'\n",
+    "intermediate_layer_model = tf.keras.Model(inputs=[loaded_model.input[0],loaded_model.input[1],loaded_model.input[2]],\n",
+    "                                 outputs=loaded_model.get_layer(layer_name).output)"
    ]
   },
   {
@@ -148,13 +207,12 @@
     "\n",
     "for i, row in tqdm(articles.iterrows()):\n",
     "    \n",
-    "    article_page_title = row['page_title']\n",
-    "    article_page_description = str(row['meta_description'])\n",
-    "       \n",
+    "#     article_catch_all = str(row['page_title'])+\" \"+ str(row['meta_description'])\n",
+    "    article_catch_all = str(row['page_title']) +\" \"+ str(row['meta_description'])+\" \"+str(row['keywords'])\n",
+    "      \n",
     "    #fast text embedding\n",
     "    return_tokenizer1 = bert_tokenizer.encode_plus(\n",
-    "      article_page_title,\n",
-    "      article_page_description,\n",
+    "      article_catch_all,\n",
     "      max_length=MAX_TOKENS,\n",
     "      add_special_tokens=True,\n",
     "      return_token_type_ids=True,\n",
@@ -196,7 +254,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "articles_vector = np.asarray(bert_model([input_ids_article_title,input_masks_article_title,input_token_id_article_title])[1])"
+    "articles_vector = np.asarray(intermediate_layer_model.predict([input_ids_article_title,input_masks_article_title,input_token_id_article_title])[1])"
    ]
   },
   {
@@ -249,13 +307,12 @@
     "\n",
     "for i, row in tqdm(tables.iterrows()):\n",
     "    \n",
-    "    table_title = row['table_page_title']\n",
-    "    table_page_description = str(row['table_page_summary'])\n",
+    "#     table_catch_all = str(row['table_page_title'])+\" \"+str(row['table_page_summary'])\n",
+    "    table_catch_all = str(row['table_page_title'])+\" \"+str(row['table_page_summary'])+\" \"+str(row['table_page_keywords'])\n",
     "    \n",
     "    #fast text embedding\n",
     "    return_tokenizer1 = bert_tokenizer.encode_plus(\n",
-    "      table_title,\n",
-    "      table_page_description,\n",
+    "      table_catch_all,\n",
     "      max_length=MAX_TOKENS,\n",
     "      add_special_tokens=True,\n",
     "      return_token_type_ids=True,\n",
@@ -302,7 +359,7 @@
     "\n",
     "for i in tqdm(range(100,(len(input_ids_tables_title)+100),100)):\n",
     "    \n",
-    "    tables_vector.append(np.asarray(bert_model([input_ids_tables_title[first:i],input_masks_tables_title[first:i],input_token_id_tables_title[first:i]])[1]))\n",
+    "    tables_vector.append(np.asarray(intermediate_layer_model.predict([input_ids_tables_title[first:i],input_masks_tables_title[first:i],input_token_id_tables_title[first:i]])[1]))\n",
     "    \n",
     "    first = first + 100"
    ]
@@ -509,39 +566,8 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "articles.head(1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ancor_title = str(triplet_data.loc[10]['article_page_title'])\n",
-    "ancor_description = str(triplet_data.loc[10]['article_page_meta_description'])"
+    "selected_top"
    ]
   },
   {
@@ -550,319 +576,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "input_ids_ancor = []\n",
-    "input_masks_ancor = []\n",
-    "input_token_id_ancor = []\n",
-    "\n",
-    "return_tokenizer1 = bert_tokenizer.encode_plus(\n",
-    "ancor_title,\n",
-    "ancor_description,\n",
-    "max_length=MAX_TOKENS,\n",
-    "add_special_tokens=True,\n",
-    "return_token_type_ids=True,\n",
-    "pad_to_max_length=True,\n",
-    "return_attention_mask=True)\n",
-    "\n",
-    "input_ids_ancor.append(return_tokenizer1['input_ids'])\n",
-    "input_masks_ancor.append(return_tokenizer1['attention_mask'])\n",
-    "input_token_id_ancor.append(return_tokenizer1['token_type_ids']) "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "input_ids_ancor = np.array(input_ids_ancor)\n",
-    "input_masks_ancor = np.array(input_masks_ancor)\n",
-    "input_token_id_ancor = np.array(input_token_id_ancor)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ancor_vector = np.asarray(bert_model([input_ids_ancor,input_masks_ancor,input_token_id_ancor])[1])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ancor_true_title = str(triplet_data.loc[10]['true_table_page_title'])\n",
-    "ancor_true_description = str(triplet_data.loc[10]['true_table_page_summary'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "input_ids_ancor = []\n",
-    "input_masks_ancor = []\n",
-    "input_token_id_ancor = []\n",
-    "\n",
-    "return_tokenizer1 = bert_tokenizer.encode_plus(\n",
-    "ancor_true_title,\n",
-    "ancor_true_description,\n",
-    "max_length=MAX_TOKENS,\n",
-    "add_special_tokens=True,\n",
-    "return_token_type_ids=True,\n",
-    "pad_to_max_length=True,\n",
-    "return_attention_mask=True)\n",
-    "\n",
-    "input_ids_ancor.append(return_tokenizer1['input_ids'])\n",
-    "input_masks_ancor.append(return_tokenizer1['attention_mask'])\n",
-    "input_token_id_ancor.append(return_tokenizer1['token_type_ids']) "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "input_ids_ancor = np.array(input_ids_ancor)\n",
-    "input_masks_ancor = np.array(input_masks_ancor)\n",
-    "input_token_id_ancor = np.array(input_token_id_ancor)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ancor_true_vector = np.asarray(bert_model([input_ids_ancor,input_masks_ancor,input_token_id_ancor])[1])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import numpy as np\n",
-    "from sklearn.metrics import pairwise_distances\n",
-    "from sklearn.metrics.pairwise import pairwise_kernels"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "distance_ancor_true = pairwise_distances(ancor_vector, ancor_true_vector, metric='cosine')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "distance_ancor_true"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ancor_false_title = str(triplet_data.loc[10]['false_table_page_title'])\n",
-    "ancor_false_description = str(triplet_data.loc[10]['false_table_page_summary'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "input_ids_ancor = []\n",
-    "input_masks_ancor = []\n",
-    "input_token_id_ancor = []\n",
-    "\n",
-    "return_tokenizer1 = bert_tokenizer.encode_plus(\n",
-    "ancor_false_title,\n",
-    "ancor_false_description,\n",
-    "max_length=MAX_TOKENS,\n",
-    "add_special_tokens=True,\n",
-    "return_token_type_ids=True,\n",
-    "pad_to_max_length=True,\n",
-    "return_attention_mask=True)\n",
-    "\n",
-    "input_ids_ancor.append(return_tokenizer1['input_ids'])\n",
-    "input_masks_ancor.append(return_tokenizer1['attention_mask'])\n",
-    "input_token_id_ancor.append(return_tokenizer1['token_type_ids']) "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "input_ids_ancor = np.array(input_ids_ancor)\n",
-    "input_masks_ancor = np.array(input_masks_ancor)\n",
-    "input_token_id_ancor = np.array(input_token_id_ancor)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ancor_false_vector = np.asarray(bert_model([input_ids_ancor,input_masks_ancor,input_token_id_ancor])[1])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "distance_ancor_false = pairwise_distances(ancor_vector, ancor_false_vector, metric='cosine')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(\"distance to true \"+str(distance_ancor_true))\n",
-    "print(\"distance to false \"+str(distance_ancor_false))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sample_text1 = \"i love you\"\n",
-    "sample_text2 = \"glory finally nabs dodd league the world game sbs\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "return_tokenizer1 = bert_tokenizer.encode_plus(\n",
-    "sample_text1,\n",
-    "sample_text2,\n",
-    "max_length=30,\n",
-    "add_special_tokens=True,\n",
-    "return_token_type_ids=True,\n",
-    "pad_to_max_length=True,\n",
-    "return_attention_mask=True,\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "return_tokenizer1['input_ids'])\n",
-    "return_tokenizer1['attention_mask']\n",
-    "return_tokenizer1['token_type_ids']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "return_tokenizer1['input_ids']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "return_tokenizer1['attention_mask']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "return_tokenizer1['token_type_ids']"
+    "idQueryGoal"
    ]
   }
  ],
