--- a/encoder_models/encoder_model_title/encoder_model_title_GRU.ipynb
+++ b/encoder_models/encoder_model_title/encoder_model_title_GRU.ipynb
@@ -30,9 +30,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "found GPU at /device:GPU:0\n"
+     ]
+    }
+   ],
    "source": [
     "device_name = tf.test.gpu_device_name()\n",
     "if device_name != '/device:GPU:0':\n",
@@ -42,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,14 +92,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "train_data = train_data.head(100)\n",
+    "validation_data = validation_data.head(100)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,9 +177,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100it [00:00, 1413.83it/s]\n"
+     ]
+    }
+   ],
    "source": [
     "train_article_page_title = []\n",
     "train_true_table_page_title = []\n",
@@ -183,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,14 +220,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "9417it [00:23, 407.85it/s]\n"
+      "100it [00:00, 1310.15it/s]\n"
      ]
     }
    ],
@@ -226,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -258,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -293,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -319,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -328,9 +347,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"model\"\n",
+      "__________________________________________________________________________________________________\n",
+      "Layer (type)                    Output Shape         Param #     Connected to                     \n",
+      "==================================================================================================\n",
+      "input_1 (InputLayer)            [(None, 31, 50)]     0                                            \n",
+      "__________________________________________________________________________________________________\n",
+      "input_2 (InputLayer)            [(None, 31, 50)]     0                                            \n",
+      "__________________________________________________________________________________________________\n",
+      "input_3 (InputLayer)            [(None, 31, 50)]     0                                            \n",
+      "__________________________________________________________________________________________________\n",
+      "bidirectional (Bidirectional)   (None, 1024)         1732608     input_1[0][0]                    \n",
+      "                                                                 input_2[0][0]                    \n",
+      "                                                                 input_3[0][0]                    \n",
+      "__________________________________________________________________________________________________\n",
+      "concatenate (Concatenate)       (None, 3072)         0           bidirectional[0][0]              \n",
+      "                                                                 bidirectional[1][0]              \n",
+      "                                                                 bidirectional[2][0]              \n",
+      "==================================================================================================\n",
+      "Total params: 1,732,608\n",
+      "Trainable params: 1,732,608\n",
+      "Non-trainable params: 0\n",
+      "__________________________________________________________________________________________________\n"
+     ]
+    }
+   ],
    "source": [
     "model.summary()"
    ]
