--- a/encoder_models/encoder_model_title/test_encoder_model_GRU_title.ipynb
+++ b/encoder_models/encoder_model_title/test_encoder_model_GRU_title.ipynb
@@ -178,7 +178,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "final_encoder_model.summary()"
+   ]
   },
   {
    "cell_type": "markdown",
