--- a/learning_to_rank_models/model_title_main_passage/affinity_model_title_main_passage.ipynb
+++ b/learning_to_rank_models/model_title_main_passage/affinity_model_title_main_passage.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,18 +17,17 @@
     "from nltk.tokenize import TweetTokenizer\n",
     "tknzr = TweetTokenizer()\n",
     "from sklearn.metrics import accuracy_score, precision_score, recall_score, f1_score\n",
-    "warnings.filterwarnings('ignore')\n",
-    "import fasttext"
+    "warnings.filterwarnings('ignore')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_dataset = pd.read_csv('../train_data/train_data_1_1', delimiter=',')\n",
-    "validation_dataset = pd.read_csv('../train_data/validation_data_1_1', delimiter=',')"
+    "train_dataset = pd.read_csv('../../train_data/train_data_1_1', delimiter=',')\n",
+    "# validation_dataset = pd.read_csv('../train_data/validation_data_1_1', delimiter=',')"
    ]
   },
   {
@@ -439,7 +438,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.6.10"
   }
  },
  "nbformat": 4,
