--- a/learning_to_rank_models/model_title/best_model_affinity_plus_attention.ipynb
+++ b/learning_to_rank_models/model_title/best_model_affinity_plus_attention.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,8 +17,7 @@
     "from nltk.tokenize import TweetTokenizer\n",
     "tknzr = TweetTokenizer()\n",
     "from sklearn.metrics import accuracy_score, precision_score, recall_score, f1_score\n",
-    "warnings.filterwarnings('ignore')\n",
-    "import fasttext"
+    "warnings.filterwarnings('ignore')"
    ]
   },
   {
@@ -27,8 +26,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_dataset = pd.read_csv('train_data_1M.csv', delimiter=',')\n",
-    "validation_dataset = pd.read_csv('validation_data_1M.csv', delimiter=',')"
+    "train_dataset = pd.read_csv('../../train_data/train_data_1_1', delimiter=',')\n",
+    "validation_dataset = pd.read_csv('../../train_data/validation_data_1_1', delimiter=',')"
    ]
   },
   {
@@ -43,8 +42,15 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "embedding_model = gs.models.FastText.load('../train_embedding_models/fasttext_embedding_50d_all_signals')"
+    "embedding_model = gs.models.FastText.load('../../train_embedding_models/fasttext_embedding_50d_all_signals')"
    ]
   },
   {
@@ -165,16 +171,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def attention_method(query, key, value):\n",
+    "def affinity_method(query, document):\n",
     "    \n",
-    "    scores = tf.matmul(query, key, transpose_b=True)\n",
+    "    transpose_document = tf.transpose(document,perm=[0, 2, 1])\n",
     "    \n",
-    "    distribution = tf.nn.softmax(scores)\n",
+    "    affinity = tf.matmul(query,transpose_document)\n",
     "    \n",
-    "    attention_matrix = tf.matmul(distribution, value)\n",
+    "    normalize_affinity = tf.nn.softmax(affinity)\n",
     "    \n",
-    "    return attention_matrix"
+    "    return normalize_affinity"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -190,13 +203,17 @@
     "    context_titleA = tf.keras.layers.Bidirectional(tf.keras.layers.GRU(32, return_sequences=True))(article_title)\n",
     "    context_titleB = tf.keras.layers.Bidirectional(tf.keras.layers.GRU(32, return_sequences=True))(table_title)\n",
     "    \n",
-    "    affinity_titleA_titleB = attention_method(context_titleA,context_titleB,context_titleA)\n",
-    "    \n",
+    "    affinity_titleA_titleB = affinity_method(context_titleA,context_titleB)\n",
     "    context_affinity = tf.keras.layers.Bidirectional(tf.keras.layers.GRU(32, return_sequences=True))(affinity_titleA_titleB)\n",
+    "    learned_vectorA = tf.keras.layers.Flatten()(context_affinity)\n",
     "    \n",
-    "    learned_vector = tf.keras.layers.Flatten()(context_affinity)\n",
+    "    attention_titleA_titleB = tf.keras.layers.Attention()([context_titleA, context_titleB])\n",
+    "    context_attention = tf.keras.layers.Bidirectional(tf.keras.layers.GRU(32, return_sequences=True))(attention_titleA_titleB)\n",
+    "    learned_vectorB = tf.keras.layers.Flatten()(context_attention)\n",
+    "    \n",
+    "    final_representation = tf.keras.layers.Concatenate()([learned_vectorA,learned_vectorB])\n",
     "   \n",
-    "    MLP_input = tf.keras.layers.Dense(64, activation='relu')(learned_vector)\n",
+    "    MLP_input = tf.keras.layers.Dense(64, activation='relu')(final_representation)\n",
     "    dropout1 = tf.keras.layers.Dropout(0.5, name=\"dropout1\")(MLP_input)\n",
     "    MLP_hidden = tf.keras.layers.Dense(32, activation='relu')(dropout1)\n",
     "    dropout2 = tf.keras.layers.Dropout(0.5, name=\"dropout2\")(MLP_hidden)\n",
@@ -206,13 +223,6 @@
     "    \n",
     "    return model"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -238,8 +248,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "filepath=\"best_model_title_attention_{epoch:02d}_{val_accuracy:.4f}.h5\"\n",
-    "checkpoint = tf.keras.callbacks.ModelCheckpoint(filepath, monitor='val_accuracy', verbose=2, save_best_only=True, mode='max')\n",
+    "filepath=\"best_model_title_affinity_plus_attention_{epoch:02d}_{val_accuracy:.4f}.h5\"\n",
+    "checkpoint = tf.keras.callbacks.ModelCheckpoint(filepath, monitor='val_accuracy', verbose=1, save_best_only=True, mode='max')\n",
     "callbacks_list = [checkpoint]"
    ]
   },
@@ -250,12 +260,40 @@
    "outputs": [],
    "source": [
     "history = model.fit([train_article_title, train_table_title], train_label, \n",
-    "          epochs=30, \n",
+    "          epochs=20, \n",
     "          batch_size=32,\n",
-    "          verbose=2,\n",
+    "          verbose=1,\n",
     "          validation_data=([validation_article_title, validation_table_title], validation_label),\n",
     "          callbacks=callbacks_list)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
